projet_gl/src/test/deca/context/valid/2_07/2_07_1_DeclMethod.deca
// Description:
//    Programme test si un méthode peut être déclaré
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    int fieldOne() {}
}